Fixing some layout bugs

--- a/_sass/header.scss
+++ b/_sass/header.scss
@@ -77,7 +77,7 @@
 		position: static;
 
 		li>a{
-			margin-right: 0px;
+			margin-right: -6px;
 			height: $header-height;
 			line-height: $header-height / 2;
 			padding-left: 5px;
@@ -166,6 +166,7 @@
 			height: $header-height + 20;
 
 			li>a{
+				margin-right: -1px;
 				height: $header-height + 20;
 				line-height: ($header-height + 20) / 2;
 				padding-left: 15px;
